--- a/src/styles/app-new.css
+++ b/src/styles/app-new.css
@@ -33,7 +33,6 @@ body{
     display: inline;
     box-shadow:rgb(189, 189, 189) -1px 7px 9px;
     border-radius: 10px;
-    height:170px;
     width:95% !important;
     background-color: #fff;
     position: relative;
@@ -73,7 +72,7 @@ body{
 } */
 
 .info-info .row:nth-child(1){
-    height: 35px;
+    height: 25px;
     border-bottom: 1px solid #c9c9c9;
 }
 
@@ -132,6 +131,7 @@ body{
   text-align: center;
   float: left;
   margin-top: 10px;
+  margin-left: 20px;
 }
 
 .info-info .row:nth-child(3) .col-3 div:nth-child(2){
