--- a/src/styles/app-new.css
+++ b/src/styles/app-new.css
@@ -59,272 +59,50 @@ body{
     font-size: 10pt;
 }
 
-/* .info-info{
-  display: inline;
-  box-shadow:rgb(189, 189, 189) -1px 7px 9px;
+.inputSearch{
+  width: 20%;
+  height: 32px;
+  padding-right: 25px !important;
   border-radius: 10px;
-  height: 280px;
-  width:95% !important;
-  position: relative;
-  top:80px !important;
-  font-family: 'vazir' !important;
+}
+
+.iconSearch{
+  position: absolute;
+  top:15px;
+  right: 12px;
+  color: #3e7bfa;
+}
+
+.items .col-2{
   float: right;
-} */
-
-.info-info .row:nth-child(1){
-    height: 25px;
-    border-bottom: 1px solid #c9c9c9;
-}
-
-.info-info .row:nth-child(1) .col-2{
-  font-size: 16px;
-    font-family: 'vazir';
-    margin-right: 30px;
-    text-align: center;
-    height: 100%;
-}
-
-.info-info .row:nth-child(2){
-    background-color: #e0e0e0;
-    border-bottom: 1px solid #c9c9c9;
-}
-
-.info-info .row:nth-child(2) .col-2{
-    font-size: 11pt;
-    font-family: 'vazir';
-    margin-right: 35px;
-}
-
-.info-info .row:nth-child(2) .col-2 input{
-    height: 32px;
-    width: 13vw;
-    padding-right: 25px !important;
-    border-radius: 10px;
-}
-
-.info-info .row:nth-child(2) .col-2 i{
-    position: absolute;
-    top:8px;
-    right: 5px;
-    color: #3e7bfa;
-}
-
-
-.info-info .row:nth-child(3){
-    background-color: #fff;
-    height: 260px;
-    border-radius: 10px;
-}
-
-.info-info .row:nth-child(3) .col-2{
-    text-align: center;
-    height: 100%;
-    line-height: 35px;
-    font-size: 14px;
-    float: right;
-    margin-top: 5px;
-}
-
-.info-info .row:nth-child(3) .col-3{
-  height: 100%;
-  width: 70px;
   text-align: center;
+  font-size: 16px;
+  font-family: 'yekan';
+  font-weight: bold;
+  line-height: 45px;
+}
+
+.items .col-3{
   float: left;
+  height: 100%;
+  width: 20%;
+  text-align: center;
+}
+
+.items .col-3 button{
   margin-top: 10px;
   margin-left: 20px;
 }
 
-.info-info .row:nth-child(3) .col-3 div:nth-child(2){
-  margin-right: 15px;
-}
-
-.pagination-system{
-  direction:ltr !important;
- top: 0;
- bottom: 0;
- margin: auto;
- width:205px;
-}
-.pagination-system a{
-  color: #212529 !important;
+.pagination{
+  direction: ltr;
+  width:150px;
+  margin-bottom: 0;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 /* /////////////////////////////////////////////////////// */
-
-/* .info-info-log{
-  display: inline;
-  box-shadow:rgb(189, 189, 189) -1px 7px 9px;
-  border-radius: 10px;
-  height: 280px;
-  width:95% !important;
-  background-color: #fff;
-  position: relative;
-  top:80px !important;
-  font-family: 'vazir' !important;
-  float: right;
-  
-} */
-
-.info-info-log .row:nth-child(1){
-  height: 25px;
-  border-bottom: 1px solid #c9c9c9;
-}
-
-.info-info-log .row:nth-child(1) .col-2{
-    width: 130px;
-    font-family: 'vazir';
-    margin-right: 3px;
-    text-align: center;
-    height: 100%;
-    font-weight: bold;
-}
-
-.info-info-log .row:nth-child(2) .col-2{
-  font-size: 11pt;
-  font-family: 'vazir';
-  margin-right: 10px;
-  width: 120px;
-}
-
-.info-info-log .row:nth-child(2){
-    background-color: #e0e0e0;
-    border-bottom: 1px solid #c9c9c9;
-}
-
-.info-info-log .row:nth-child(2) .col-2 input{
-  width: 115px;
-  height: 32px;
-  padding-right: 25px !important;
-  border-radius: 10px;
-}
-
-.info-info-log .row:nth-child(2) .col-2 i{
-  position: absolute;
-  top:8px;
-  right: 5px;
-  color: #3e7bfa;
-}
-
-.info-info-log .row:nth-child(3){
-  background-color: #fff;
-  height: 260px;
-  border-radius: 10px;
-  border-bottom: 1px solid #c9c9c9;
-
-}
-
-.info-info-log .row:nth-child(3) .col-2{
-  text-align: center;
-  width: 100px;
-  height: 100%;
-  line-height: 35px;
-  font-size: 14px;
-  float: right;
-  margin-top: 5px;
-  overflow: hidden;
-}
-
-.info-info-log .row:nth-child(3) .col-3{
-height: 100%;
-width: 70px;
-text-align: center;
-float: left;
-margin-top: 10px;
-}
-
-.info-info-log .row:nth-child(3) .col-3 div:nth-child(2){
-margin-right: 15px;
-}
-
-/* ////////////// */
-
-.info-info-acception{
-  display: inline;
-  box-shadow:rgb(189, 189, 189) -1px 7px 9px;
-  border-radius: 10px;
-  height: 280px;
-  width:95% !important;
-  background-color: #fff;
-  position: relative;
-  top:80px !important;
-  font-family: 'vazir' !important;
-  float: right;
-  
-}
-
-.info-info-acception .row:nth-child(1){
-  height: 50px;
-  border-bottom: 1px solid #c9c9c9;
-}
-
-.info-info-acception .row:nth-child(1) .col-2{
-    width: 120px;
-    font-family: 'vazir';
-    margin-right: 0;
-    text-align: center;
-    height: 100%;
-    font-weight: bold;
-}
-
-.info-info-acception .row:nth-child(1) .col-2 span{
-  font-size: 13px;
-}
-
-.info-info-acception .row:nth-child(2) .col-2{
-  font-size: 11pt;
-  font-family: 'vazir';
-  margin-right: 5px;
-  width: 115px;
-}
-
-.info-info-acception .row:nth-child(2){
-    background-color: #e0e0e0;
-    border-bottom: 1px solid #c9c9c9;
-}
-
-.info-info-acception .row:nth-child(2) .col-2 input{
-  width: 105px;
-  height: 32px;
-  padding-right: 25px !important;
-  border-radius: 10px;
-}
-
-.info-info-acception .row:nth-child(2) .col-2 i{
-  position: absolute;
-  top:8px;
-  right: 5px;
-  color: #3e7bfa;
-}
-
-.info-info-acception .row:nth-child(3){
-  background-color: #fff;
-  height: 260px;
-  border-radius: 10px;
-}
-
-.info-info-acception .row:nth-child(3) .col-2{
-  text-align: center;
-  width: 100px;
-  height: 100%;
-  line-height: 35px;
-  font-size: 11px;
-  float: right;
-  margin-top: 5px;
-  overflow: hidden;
-}
-
-.info-info-acception .row:nth-child(3) .col-3{
-height: 100%;
-width: 70px;
-text-align: center;
-float: left;
-margin-top: 10px;
-}
-
-.info-info-acception .row:nth-child(3) .col-3 div:nth-child(2){
-margin-right: 15px;
-}
-
 
 .valid-input {
   border: 1px solid #12a668 !important;
@@ -349,40 +127,12 @@ margin-right: 15px;
 
 /* /////////////////////////////////////////////////////////// */
 
-@media screen and (max-width: 870px) {
-  .info-info .row:nth-child(1) .col-2 span{
-    font-size: 16px;
-  }
-  .info-info .row:nth-child(2) .col-2 input{
-      width: 14vw !important;
-  }
-  .info-info{
-      width: 100% !important;
-  }
-  .info-form{
-      width: 99% !important;
+@media screen and (max-width: 952px) {
+  .items .col-3{
+    width: 18%;
   }
 }
 
-@media screen and (max-width: 737px) {
-  .info-info .row:nth-child(1) .col-2 span {
-    font-size: 14px;
-    font-weight: bold;
-  }
-}
-
-@media screen and (max-width: 686px) {
-  .info-info .row:nth-child(1) .col-2 span {
-    font-size: 13px;
-    font-weight: bold;
-  }
-}
-
-@media screen and (max-width: 674px) {
-  .info-info .row:nth-child(3) .col-3 {
-    width: 75px !important;
-  }
-}
 /* /////////////////////////////////////////////////////////// */
 
 @media screen and (max-width: 920px) {
